--- a/index.html
+++ b/index.html
@@ -1,315 +1,73 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
+    <title>TimeTable</title>
 <head>
-    <title>
-        WEBPAGE
-    </title>
-</head>
-<link rel="stylesheet" href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css>
+    <style>
+        h1{font-family:'Times New Roman', Times, serif;font-size: 14px;}
+        tr:nth-child(even){
+            background-color: aqua;
+        }
+        h2{
+            align-items: center;
+        }
+        
+        </style>
+    <table border="7">
 
-<style>
-    .flex-container {
-        display: flex;
-        background-color: white;
-        padding: 20px;
-        flex-direction: column;
-        text-decoration: none;
-    }
+               
+<tr>
+    <th><h1>MONDAY</h1></th>
+    <th><h1>TUESDAY</h1></th>
+    <th><h1>WEDNESDAY</h1></th>
+    <th><h1>THURSDAY</h1></th>
+    <th><h1>FRIDAY</h1></th>
+    <th><h1>SATURDAY</h1></th>
+    <th><h1>SUNDAY</h1></th>
+<tr>
+    <td><h2>1</h2></td>
+    <td><h2>2</h2></td>
+    <td><h2>3</h2></td>
+    <td><h2>4</h2></td>
+    <td><h2>5</h2></td>
+    <td><h2>6</h2></td>
+    <td><h2>7</h2></td>
+</tr>
 
-    .flex-container>div {
-        display: flex;
-        flex-direction: column;
-        text-decoration: none;
+<tr>
+    <td><h2>8</h2></td>
+    <td><h2>9</h2></td>
+    <td><h2>10</h2></td>
+    <td><h2>11</h2></td>
+    <td><h2>12</h2></td>
+    <td><h2>13</h2></td>
+    <td><h2>14</h2></td>   
+</tr>
 
-    }
+<tr>
+    <td><h2>15</h2></td>
+    <td><h2>16</h2></td>
+    <td><h2>17</h2></td>
+    <td><h2>18</h2></td>
+    <td><h2>19</h2></td>
+    <td><h2>20</h2></td>
+    <td><h2>21</h2></td>
+</tr>
 
-    .grid-container {
-        display: grid;
-        grid-template-columns: auto auto;
-        height: 500px;
-        background-color: antiquewhite;
-        padding: 50px;
-    }
+<tr>
+    <td><h2>22</h2></td>
+    <td><h2>23</h2></td>
+    <td><h2>24</h2></td>
+    <td><h2>25</h2></td>
+    <td><h2>26</h2></td>
+    <td><h2>27</h2></td>
+    <td><h2>28</h2></td>
+</tr>
 
-    .grid-container>span {
-        background-color: antiquewhite;
-    }
-
-    ul {
-        list-style-type: none;
-        margin-left: 50;
-        padding: 0;
-        overflow: hidden;
-        background-color: antiquewhite;
-        position: -webkit-sticky;
-        /* Safari */
-        position: absolute;
-        top: 0;
-
-    }
-
-    li {
-        display: inline-block;
-        color: black;
-        padding: 20px 16px;
-        text-decoration: #c0c0c0;
-        font-size: large;
-    }
-
-    .SELFOWN {
-        margin-right: 200px;
-    }
-
-    .grid-container2 {
-        display: grid;
-        grid-template-columns: auto auto;
-        padding: 0px;
-        margin-left: 00px;
-
-    }
-
-    a:hover {
-        background-color: azure;
-    }
-
-    .card {
-        /* Add shadows to create the "card" effect */
-        background-color: aliceblue;
-        box-shadow: 0px 0px 3px 3px gray;
-        margin-left: 50px;
-        border-radius: 7px;
-        height: 50px;
-        transition: 0.3s
-    }
-
-    /* On mouse-over, add a deeper shadow */
-    .card:hover {
-        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-    }
-
-    .card2 {
-        /* Add shadows to create the "card" effect */
-        background-color: aliceblue;
-        border-radius: 7px;
-        box-shadow: 0px 0px 3px 3px gray;
-        transition: 0.3s
-    }
-
-    /* On mouse-over, add a deeper shadow */
-    .card2:hover {
-        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-    }
-
-    .card3 {
-        /* Add shadows to create the "card" effect */
-        background-color: aliceblue;
-        box-shadow: 0px 0px 3px 3px gray;
-        transition: 0.3s
-    }
-
-    /* On mouse-over, add a deeper shadow */
-    .card3:hover {
-        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-    }
-
-    .grid-container3 {
-        display: grid;
-        grid-template-columns: auto auto auto auto;
-        column-gap: -50px;
-        margin-top: 50px;
-        row-gap: 20px;
-
-    }
-
-    .h3 {
-        justify-content: center;
-    }
-
-    .service {
-        margin-right: 500px;
-    }
-
-    .image {
-        margin-left: 50px;
-    }
-
-    .container-fluid {
-        text-align: center;
-        font-size: 25px;
-    }
-
-    .para {
-        font-size: large;
-    }
-
-    .grid-container6 {
-        display: grid;
-        grid-template-columns: auto auto auto auto;
-        padding-top: 50px;
-    }
-</style>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
-<body>
-
-    <ul>
-
-        <li><B>
-                <h3><a class="SELFOWN"><i class="fa-solid fa-book" style="color: #400040;"></i>&nbsp;SELFOWN</a></h3>
-            </B></li>
-        <li><a href="default.asp">Home</a></li>
-        <li><a href="About.asp">About</a></li>
-        <li><a href="Services.asp">Services</a></li>
-        <li><a href="Resume.asp">Resume</a></li>
-        <li><a href="project.asp">Project</a></li>
-        <li><a href="Blogs.asp">Blogs</a></li>
-        <li><a href="contact.asp">contact</a></li>
-    </ul>
-    <span class="grid-container">
-        <span>
-            <p>
-            <h2 style="margin-top:50px; margin-left: 200px; color: cadetblue; padding-top: 50px;">Hi,Iam Felix</h2>
-            <h1 style="margin-top: 100px; margin-left: 200px; font-size:300%;  color:midnightblue;">Iam a freelance
-                <p style="margin-left: 100px;">Developer
-            </h1>
-            </p>
-            <button type="submit" style="margin-left: 350px;border-radius:7px;background-color: rgb(40, 130, 233);
-                font-size: larger; color: aliceblue;">Download
-                cv </button>
-        </span>
-    </span>
-
-
-    <h1><B>Personal Details</B></h1>
-    <span class="grid-container2">
-        <p style="font-size:20px"> It is long established fact that a reader will be<br> distracted by the readable
-            content of a page<br> when looking at its layout</p>
-
-
-        <p style="font-size :20px; margin-right: 150px;">Nationality : India<br>
-            Interest : Gaming,Drawing<br>
-            Date of Birth : 26 march 2002<br>
-            Spoken languages : Tamil-English</p>
-        <div class="image">
-            <i class="fa-brands fa-twitter"
-                style="color: #c0c0c0; background-color:white; font-size:x-large; color:deepskyblue"><a
-                    href="twitter.asp"></a></i>
-            <i class="fa-brands fa-google-plus-g fa-xl"
-                style="color: #c0c0c0; border-radius: 50%; background-color:lightgrey; font-size: x-large; color:brown"><a
-                    href="google-plus-g.asp"></a></i>
-            <i class="fa-brands fa-linkedin"
-                style="color: #c0c0c0;padding: 10px; border-radius: 50%; font-size: x-large; color:dodgerblue">
-                <a href="fa-brands fa-linkedin"></a></i>
-            <i class="fa-brands fa-github"
-                style="color: #808080;padding:10px; border-radius: 50%; box-shadow: inset; font-size: x-large; color: #808080;"></i>
-        </div>
-
-
-
-    </span>
-    <div class="grid-container3">
-        <div class="card" style="width: 10rem; height: 120px; text-align: center;">
-            <div class="card-body" style="text-align: center;"><i class="fa-brands fa-android"
-                    style="color: #80ff00; font-size: xx-large;"></i></div>
-            <h4 class="card-title" style="color:steelblue ;">Android</h4>
-            <p class="card-text">2 Year Experience</p>
-        </div>
-
-
-        <div class="card" style="width: 10rem; height: 120px;text-align: center;">
-            <i class="fa-brands fa-angular" style="color: #800000; font-size: xx-large; padding-top: 8px;"></i>
-            <div class="card-body2" style="text-align: center;"></div>
-            <h4 class="card-title" style="color:royalblue;">Angular</h4>
-            <p class="card-text2">1 Year Experience</p>
-        </div>
-
-        <div class="card" style="width: 10rem; height: 120px; text-align: center;">
-            <i class="fa-brands fa-bootstrap" style="color: #400080; font-size: xx-large;padding-top: 10px;"></i>
-            <div class="card-body3" style="text-align: center;"></div>
-            <h4 class="card-title" style="color:royalblue;">Bootstrap</h4>
-            <p class="card-text4">3 Year Experience</p>
-        </div>
-        <div class="card" style="width: 10rem; height: 120px; text-align: center;">
-            <i class="fa-brands fa-vuejs" style="color: #0080c0; font-size:xx-large ; padding-top: 10px;"></i>
-            <div class="card-body4" style="text-align: center;"></div>
-            <h4 class="card-title" style="color:steelblue;">Vue</h4>
-            <p class="card-text5">2 Year Experience</p>
-
-        </div>
-        <div class="card" style="width: 10rem; height: 120px; text-align: center;">
-            <i class="fa-brands fa-react" style="font-size:xx-large; padding-top: 10px;"></i>
-            <div class="card-body5" style="text-align: center;"></div>
-            <h4 class="card-title" style="color:steelblue;">React</h4>
-            <p class="card-text">1 Year Experience</p>
-        </div>
-
-        <div class="card" style="width: 10rem; height: 110px; text-align: center;">
-            <i class="fa-brands fa-laravel" style="font-size:xx-large;"></i>
-            <div class="card-body6" style="text-align: center;"></div>
-            <h4 class="card-title" style="color: steelblue;">laravel</h4>
-            <p class="card-text">3 Year Experience</p>
-        </div>
-
-
-        <div class="card" style="width: 10rem; height: 110px; text-align: center;">
-            <i class="fa-brands fa-node-js" style="font-size:xx-large; ;"></i>
-            <div class="card-body7" style="text-align:center ;"></div>
-            <h4 class="card-title" style="color: steelblue;">
-                Node-Js</h4>
-            <p class="card-text">2 Year Experience</p>
-        </div>
-        <div class="card" style="width: 10rem; height: 120px; text-align: center;">
-            <i class="fa-solid fa-leaf" style="color: #008080;" style="font-size:xx-large; padding-top: 10px;"></i>
-            <div class="card-body7" style="text-align: center;"></div>
-            <h4 class="card-title" style="color: steelblue;">Mongodb</h4>
-            <p class="card-text">3 Month Experience</p>
-        </div>
-    </div>
-
-
-    <div class="container-fluid">
-        <div class="row-md12 mt-5">
-            <p class="text-center text-info py-3"><mark>Service</mark></p>
-        </div>
-        <p class="text-center">Our services</p>
-        <p class="para">We craft digital,graphic and dimensional thinking,to create category leading brand experience
-            that have meaning.</p>
-        <div class="grid-container6">
-            <div class="card" style="width: 300px; height: 190px; text-align: center;">
-                <div class="card-body7" style="text-align: center;"></div>
-                <i class="fa-solid fa-info"
-                    style="padding-top:5px ; color: lightpink; border-radius: 10%; width: 30px; background-color:darksalmon;"></i>
-                <h5 style="padding-bottom: 0px; background-color:lightpink; border-radius: 40%;">Awesome Support</h5>
-                <p class="card-text" style="font-size:15px;">some quick example text to build on the card title and make
-                    up the bulk of the card
-                    is content platform.</p>
-            </div>
-            <div class="card" style="width: 300px; height: 190px; text-align: center;">
-                <div class="card-body7" style="text-align: center;"></div>
-                <i class="fa-solid fa-dollar-sign"
-                    style="padding-top:5px; color: lightskyblue; border-radius: 10%; width:30px; background-color: #0080c0;"></i>
-                <h5 style="border-radius:40% ; background-color:lightskyblue; padding-bottom: 10px;">Dynamic Growth</h5>
-                </i>
-                <p class="card-text" style="font-size: 15px;">credibly brand standards complaint users without
-                    extensible services anibh euismod
-                    tincident.</p>
-            </div>
-            <div class="card" style="width: 300px; height: 190px; text-align: center;">
-                <div class="card-body7" style="text-align: center;"></div>
-                <i class="fa-solid fa-check"
-                    style="padding-top:5px ; color: darkcyan; border-radius: 10%;width: 30px; background-color:lightseagreen"></i>
-                <h5 style="border-radius:40% ; background-color:darkcyan; padding-bottom: 10px;">Branding Identity</h5>
-                <p class="card-text" style="font-size: 15px;">Separated they live in bookmarks grove right at the cost
-                    of the semantics and
-                    large.</p>
-            </div>
-        </div>
-        <div class="container-fluid">
-            <div class="row-md12 mt-5">
-                <p class="text-center text-info"><mark>LIFETIME</mark></p>
-            </div>
-            <p class="text-center">Education & Experience</p>
-
-
-
+<tr>
+    <td><h2>29</h2></td>
+    <td><h2>30</h2></td>
+</tr>
+</table>
+</head>   
+</body>
 </html>
